fixed maps not showing issue

--- a/resources/styles/pages/businesses.css
+++ b/resources/styles/pages/businesses.css
@@ -4,17 +4,17 @@
     /*background-size: 20px 20px;*/
 /*}*/
 .list-blue {
-    background: url(../../images/icons/list-blue.png) no-repeat 23px 14px;
+    background: url(../../images/icons/list-blue.png) no-repeat 50% 14px;
     background-size: 20px 20px;
 }
 /*.pin-blue:hover {*/
-    /*background-size: 20px 20px;*/
-    /*background: url(../../images/icons/pin-white.png) no-repeat 33px 14px;*/
-    /*background-size: 20px 20px;*/
+/*background-size: 20px 20px;*/
+/*background: url(../../images/icons/pin-white.png) no-repeat 20px 14px;*/
+/*background-size: 20px 20px;*/
 /*}*/
 .pin-blue {
     /*background-size: 20px 20px;*/
-    background: url(../../images/icons/pin-blue.png) no-repeat 20px 14px;
+    background: url(../../images/icons/pin-blue.png) no-repeat 50% 14px;
     background-size: 20px 20px;
 }
 
@@ -24,6 +24,72 @@
         /*position: fixed !important;*/
     /*}*/
 /*}*/
+
+
+@media only screen and (max-width:755px) {
+
+    .tabs {
+        position: absolute;
+        background: none;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+        width: 100% !important;
+    }
+
+    .tabs li {
+        margin: 0;
+        display: inline-block;
+    }
+
+    .tabs a {
+        min-height: 40px;
+        min-width: 55px;
+        width: 50% !important;
+        font-size: 17px;
+        margin: 0 !important;
+        display: inline-block;
+        line-height: 25px;
+        font-weight: bold;
+        color: #757575;
+        padding: 0 20px 5px;
+        border-bottom: 6px solid rgba(0, 0, 0, 0);
+    }
+
+    /*.active::after {*/
+    /*content: "";*/
+    /*position: absolute;*/
+    /*bottom: 0; top: 0px; left: 0; right: 0;*/
+    /*border-right:4px solid orange;*/
+    /*border-left:4px solid orange;*/
+    /*}*/
+
+    /*#timelineActiveId::before {*/
+    /*content: "";*/
+    /*position: absolute;*/
+    /*bottom: 0; top: 0px; left: 0; right: 0;*/
+    /*border-right:4px solid orange;*/
+    /*border-left:4px solid orange;*/
+    /*}*/
+
+    .tabs li a:focus {
+        outline: none;
+        text-decoration: none;
+    }
+
+    .tabs a.active {
+        border-color: #00baff;
+    }
+
+}
+
+.verticalLine {
+    border-left:1.5px solid #ffffff !important;
+    height: 100%;
+    z-index: 999999;
+}
+
+
 
 footer {
 
