--- a/resources/styles/pages/classifieds.css
+++ b/resources/styles/pages/classifieds.css
@@ -5,14 +5,80 @@
 /*}*/
 
 
+@media only screen and (max-width:755px) {
+
+    .tabs {
+        position: absolute;
+        background: none;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+        width: 100% !important;
+    }
+
+    .tabs li {
+        margin: 0;
+        display: inline-block;
+    }
+
+    .tabs a {
+        min-height: 40px;
+        min-width: 55px;
+        width: 50% !important;
+        font-size: 17px;
+        margin: 0 !important;
+        display: inline-block;
+        line-height: 25px;
+        font-weight: bold;
+        color: #757575;
+        padding: 0 20px 5px;
+        border-bottom: 6px solid rgba(0, 0, 0, 0);
+    }
+
+    /*.active::after {*/
+        /*content: "";*/
+        /*position: absolute;*/
+        /*bottom: 0; top: 0px; left: 0; right: 0;*/
+        /*border-right:4px solid orange;*/
+        /*border-left:4px solid orange;*/
+    /*}*/
+
+    /*#timelineActiveId::before {*/
+        /*content: "";*/
+        /*position: absolute;*/
+        /*bottom: 0; top: 0px; left: 0; right: 0;*/
+        /*border-right:4px solid orange;*/
+        /*border-left:4px solid orange;*/
+    /*}*/
+
+    .tabs li a:focus {
+        outline: none;
+        text-decoration: none;
+    }
+
+    .tabs a.active {
+        border-color: #00baff;
+    }
+
+}
+
+.verticalLine {
+    border-left:1.5px solid #ffffff !important;
+    height: 100%;
+    z-index: 999999;
+}
+
+
 @media only screen and (min-width:767px) {
     #map {
 
         position: fixed !important;
     }
+
+
 }
 .list-blue {
-    background: url(../../images/icons/list-blue.png) no-repeat 23px 14px;
+    background: url(../../images/icons/list-blue.png) no-repeat 50% 14px;
     background-size: 20px 20px;
 }
 /*.pin-blue:hover {*/
@@ -22,7 +88,7 @@
 /*}*/
 .pin-blue {
     /*background-size: 20px 20px;*/
-    background: url(../../images/icons/pin-blue.png) no-repeat 20px 14px;
+    background: url(../../images/icons/pin-blue.png) no-repeat 50% 14px;
     background-size: 20px 20px;
 }
 
@@ -230,10 +296,10 @@ body{
 	overflow: auto;
 	-webkit-transform: translateZ(0px);
 	background-color: #E5E3DF;
-	height: 76%;
+	height: 557px;
 	width: 57%; top:66px;
 	float: left;
-    position:fixed;
+    position:fixed !important;
 }
 
 #map-border{
